--- a/Unidad.5.Lab.1.MVC/Web/Views/Materia/Edit.cshtml
+++ b/Unidad.5.Lab.1.MVC/Web/Views/Materia/Edit.cshtml
@@ -1,12 +1,35 @@
-@Model EditMateriaViewModel
+@model EditMateriaViewModel
 
+<div class="row">
+    <div class="col-lg-4 col-md-8">
+        <form asp-action="Edit">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input asp-for="Materia.Id" type="hidden" />
+            <div class="form-group">
+                <label asp-for="Materia.Descripcion" class="form-label">Descripcion</label>
+                <input asp-for="Materia.Descripcion" class="form-control" placeholder="@Model.Materia.Descripcion"
+                       value="@Model.Materia.Descripcion" />
+            </div>
 
+            <div class="form-group">
+                <label asp-for="Materia.HsSemanales" class="form-label">Horas Semanales</label>
+                <input asp-for="Materia.HsSemanales" type="number" class="form-control" placeholder="@Model.Materia.HsSemanales"
+                       value="@Model.Materia.HsSemanales">
+                <span asp-validation-for="Materia.HsSemanales" class="text-danger"></span>
+            </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+            <div class="form-group">
+                <label asp-for="Materia.HsTotales" class="form-label">Horas Totales</label>
+                <input asp-for="Materia.HsTotales" type="number" class="form-control" placeholder="@Model.Materia.HsTotales"
+                       value="@Model.Materia.HsTotales">
+                <span asp-validation-for="Materia.HsTotales" class="text-danger"></span>
+            </div>
+
+            <select class="form-group" asp-for="Materia.PlanId" asp-items="Model.Planes"></select>
+
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary">Save</button>
+            </div>
+        </form>
+    </div>
 </div>
-
-@section Scripts {
-    // Necesario para ejecutar las validaciones en el navegador (el cliente), ademas de en el servidor
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
